solo/system-firewall-rules.conf
*filter
# By default, disallow incoming requests, but allow outgoing
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [0:0]

# Set default chain policies
-P INPUT DROP
-P FORWARD DROP
-P OUTPUT DROP

# Allow incoming requests from myself
-A INPUT -i lo -j ACCEPT

# Allow ALL incoming SSH
-A INPUT -i eth0 -p tcp --dport 22 -m state --state NEW,ESTABLISHED -j ACCEPT
-A OUTPUT -o eth0 -p tcp --sport 22 -m state --state ESTABLISHED -j ACCEPT

# Allow requests to connections that have already been established
#-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT

# Allow responses from outgoing ssh requests.
-A INPUT -p tcp --sport 22 -m state --state ESTABLISHED -j ACCEPT

# Ping from inside to outside
-A OUTPUT -p icmp --icmp-type echo-request -j DROP
-A INPUT -p icmp --icmp-type echo-reply -j DROP

# Allow loopback access
-A INPUT -i lo -j ACCEPT
-A OUTPUT -o lo -j ACCEPT

# Allow outbound DNS
-A OUTPUT -p udp -o eth0 --dport 53 -j ACCEPT
-A INPUT -p udp -i eth0 --sport 53 -j ACCEPT

# Allow PostgreSQL connection only from a specific network
#-A OUTPUT -o eth0 -p tcp -d osmosis-database --dport 5432 -m state --state NEW,ESTABLISHED -j ACCEPT
#-A INPUT -i eth0 -p tcp -s osmosis-database --sport 5432 -m state --state ESTABLISHED -j ACCEPT

# Allow incoming requests to postgres.
#-A INPUT -p tcp --dport 5432 -j ACCEPT

# Allow responses from outgoing requests to postgres.
#-A INPUT -p tcp --sport 5432 -m state --state ESTABLISHED -j ACCEPT

# 23. Prevent DoS attack
-A INPUT -p tcp --dport 80 -m limit --limit 25/minute --limit-burst 100 -j ACCEPT

# Drop udplite packets
-A INPUT -p udplite -j DROP

# Allow NTP - modify for site specific.  These are tied to the default ntp servers added with the script.
-A OUTPUT -p udp -d ntp2.usno.navy.mil -m udp -j ACCEPT
-A INPUT -p udp -s ntp2.usno.navy.mil -m udp --dport 123 -j ACCEPT
-A OUTPUT -p udp -d ntp-s1.cise.ufl.edu -m udp -j ACCEPT
-A INPUT -p udp -s ntp-s1.cise.ufl.edu -m udp --dport 123 -j ACCEPT
-A OUTPUT -p udp -d ntp.colby.edu -m udp -j ACCEPT
-A INPUT -p udp -s ntp.colby.edu -m udp --dport 123 -j ACCEPT
-A OUTPUT -p udp -d tick.usno.navy.mil -m udp -j ACCEPT
-A INPUT -p udp -s tick.usno.navy.mil -m udp --dport 123 -j ACCEPT

# Allow freshclam to update the anti-virus database. Modify as appropriate for anti-virus software changes.
-A OUTPUT -o eth0 -p tcp --sport 1024:65535 -d 150.214.142.197 --dport 80 -j ACCEPT
-A INPUT -i eth0 -p tcp --sport 80 -s 150.214.142.197 --dport 1024:65535 -j ACCEPT
-A INPUT -i eth0 -p tcp --sport 80 -d 150.214.142.197 --dport 1024:65535 -j ACCEPT
-A OUTPUT -o eth0 -p tcp --sport 80 -d 150.214.142.197 --dport 1024:65535 -j ACCEPT

-A OUTPUT -o eth0 -p tcp --sport 1024:65535 -d 69.163.100.14 --dport 80 -j ACCEPT
-A INPUT -i eth0 -p tcp --sport 80 -s 69.163.100.14 --dport 1024:65535 -j ACCEPT
-A INPUT -i eth0 -p tcp --sport 80 -d 69.163.100.14 --dport 1024:65535 -j ACCEPT
-A OUTPUT -o eth0 -p tcp --sport 80 -d 69.163.100.14 --dport 1024:65535 -j ACCEPT

# 25. Log dropped packets
-N LOGGING
-A INPUT -j LOGGING
-A OUTPUT -j LOGGING
-A LOGGING -m limit --limit 2/min -j LOG --log-prefix "IPTables Packet Dropped: " --log-level 7
-A LOGGING -j DROP

###############

COMMIT
